--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="circle-wrapper">
               <img src="diche2.png" class="circle-img" alt="">
             </div>
-            <h4 class="dish-name">Spicy Desi Chicken</h4>
+            <h4 class="dish-name">Spicy Desi Biryani</h4>
             <span class="dish-price">Rs. 1,250</span>
           </div>
         </div>
@@ -524,17 +524,16 @@
           <div class="info-card">
             <h6><i class="fa-solid fa-location-dot"></i> Location</h6>
             <p>
-              123 Gourmet Street<br>
-              Downtown District<br>
-              New York, NY 10001
+              DesiChatak Restaurant<br>
+              Karachi,Pakistan
             </p>
           </div>
 
           <div class="info-card">
             <h6><i class="fa-solid fa-phone"></i> Reservations</h6>
             <p>
-              +1 (555) 123-4567<br>
-              reserve@desichatak.com
+              +92 319 123 4567<br>
+              reservation@desichatak.com
             </p>
           </div>
 
